Closed
Bug 1491639
Opened 7 years ago
Closed 7 years ago
IS_TABLE_CELL should be renamed since it is not a macro
Categories
(Core :: Layout, defect)
Core
Layout
Tracking
()
RESOLVED
FIXED
mozilla64
| Tracking | Status | |
|---|---|---|
| firefox64 | --- | fixed |
People
(Reporter: jeanluc.bonnafoux, Assigned: jeanluc.bonnafoux)
Details
Attachments
(1 file)
User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:62.0) Gecko/20100101 Firefox/62.0
Build ID: 20180830143136
Steps to reproduce:
Following discussion with @dbaron, IS_TABLE_CELL should be renamed since it is a not a macro but a function.
Actual results:
Code compiles and works but name can be misleading
Expected results:
IS_TABLE_NAME should have a normal function name since it is not a macro.
Comment on attachment 9009455 [details]
Bug 1491639 - rename function IS_TABLE_CELL
David Baron :dbaron: 🏴 ⌚UTC-7 has approved the revision.
Attachment #9009455 -
Flags: review+
Keywords: checkin-needed
Pushed by ccoroiu@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/e4990387dd8c
rename function IS_TABLE_CELL r=dbaron
Keywords: checkin-needed
Comment 4•7 years ago
|
||
| bugherder | ||
Status: UNCONFIRMED → RESOLVED
Closed: 7 years ago
status-firefox64:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla64
Updated•7 years ago
|
Assignee: nobody → jeanluc.bonnafoux
You need to log in
before you can comment on or make changes to this bug.
Description
•