Bug 1491639 - rename function IS_TABLE_CELL r=dbaron

rename function IS_TABLE_CELL

Differential Revision: https://phabricator.services.mozilla.com/D5974